--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,46 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap');
+
+body {
+    @apply px-24 text-lg font-normal;
+    h1 {
+        @apply font-medium;
+        font-size: 60px;
+        line-height: 77px;
+    }
+
+    h2 {
+        @apply font-medium;
+        font-size: 40px;
+        line-height: 51px;
+    }
+
+    h3 {
+        @apply font-medium;
+        font-size: 30px;
+        line-height: 38px;
+    }
+
+    h4 {
+        @apply font-medium;
+        font-size: 20px;
+        line-height: 26px;
+    }
+
+    p {
+        @apply font-normal;
+        font-size: 18px;
+        line-height: 23px;
+    }
+
+    .topic-header {
+        @apply flex;
+
+        .topic-header-label {
+            @apply rounded-lg w-fit px-2 mr-10 flex;
+            background-color: #B9FF66;
+        }
+    }
+}
