rename-contact-us-component-to-get-proposal-component

--- a/src/components/get-proposal/get-proposal.scss
+++ b/src/components/get-proposal/get-proposal.scss
@@ -1,4 +1,4 @@
-.contact-us {
+.get-proposal {
     @apply mt-20 flex justify-between items-center;
     padding-left: 60px;
     padding-right: 60px;
@@ -6,7 +6,7 @@
     background-color: #F3F3F3;
     height: 347px;
 
-    .contact-us-content {
+    .get-proposal-content {
         @apply flex flex-col justify-between;
         width: 500px;
         height: 227px;
