--- a/src/components/services/services.scss
+++ b/src/components/services/services.scss
@@ -1,52 +1,99 @@
 .services {
-    @apply mt-36;
+    @apply mt-10;
 
-    .topic-header {
-        p {
-            width: 580px;
+    .services-content {
+        @apply flex flex-wrap justify-between gap-10;
+        
+        .item-background-grey {
+            background-color: #F3F3F3;
+        }
+        .item-background-green {
+            background-color:#B9FF66;
+        }
+        .item-background-black {
+            background-color: #191A23;
+        }
+
+        .services-content-item {
+            @apply border-2 border-b-8 border-black p-12 flex justify-between;
+            flex: 1 1 380px;
+            max-width: 600px;
+            height: 331px;
+            border-radius: 45px;
+
+            .item-label-grey {
+                h3 {
+                    background-color: #F3F3F3
+                }
+            }
+            .item-label-green {
+                h3 {
+                    background-color:#B9FF66
+                }
+            }
+            .item-label-dark {
+                h3 {
+                    background-color:#191A23
+                }
+            }
+            
+            .services-content-item-info {
+                @apply flex flex-col justify-between shrink-0 w-full;
+                .service-content-item-label {
+                    @apply flex flex-col justify-start shrink-0;
+                    h3 {
+                        @apply rounded-md w-fit h-10 px-2;
+                    }
+                }
+
+                .link-container {
+                    @apply flex justify-between;
+                    a {
+                        @apply flex flex-col justify-end;
+                    }
+                    .service-content-item-link {
+                        @apply flex;
+
+                        span {
+                            @apply ml-4 self-center;
+                            display: none;
+                        }
+                    }
+                    .services-content-item-image-mobile {
+                        @apply flex;
+
+                        img {
+                            @apply self-center;
+                        }
+                    }
+                }
+            }
+
+            .services-content-item-image {
+                @apply flex;
+                display: none;
+
+                img {
+                    @apply self-center;
+                }
+            }
         }
     }
 
-    .services-content {
-        @apply mt-20;
+    @screen lg {
+        @apply mt-36;
 
-        .services-content-row {
-            @apply  flex justify-between;
+        .topic-header {
+            p {
+                width: 580px;
+            }
+        }
 
-            .item-background-grey {
-                background-color: #F3F3F3;
-            }
-            .item-background-green {
-                background-color:#B9FF66;
-            }
-            .item-background-black {
-                background-color: #191A23;
-            }
-
-            .service-content-left-item {
-                @apply mr-6;
-            }
-
+        .services-content {
+            @apply flex flex-wrap gap-10 mt-20 ;
+        
             .services-content-item {
-                @apply border-2 border-b-8 border-black p-12 flex justify-between mt-10;
-                width: 600px;
-                border-radius: 45px;
-
-                .item-label-grey {
-                    h3 {
-                        background-color: #F3F3F3
-                    }
-                }
-                .item-label-green {
-                    h3 {
-                        background-color:#B9FF66
-                    }
-                }
-                .item-label-dark {
-                    h3 {
-                        background-color:#191A23
-                    }
-                }
+                flex: 1 1 430px;
                 
                 .services-content-item-info {
                     @apply flex flex-col justify-between w-fit h-52;
@@ -56,23 +103,28 @@
                         }
                     }
 
-                    .service-content-item-link {
-                        @apply flex w-fit mt-10;
-
-                        span {
-                            @apply ml-4 self-center;
+                    .link-container {
+                        .service-content-item-link {
+                            @apply flex w-fit mt-10;
+    
+                            span {
+                                @apply ml-4 self-center;
+                                display: inline;
+                            }
+                        }
+                        .services-content-item-image-mobile {
+                            display: none;
                         }
                     }
                 }
     
-                .services-content-item-image {
-                    
+                .services-content-item-image {                        
                     @apply flex;
                     img {
                         @apply self-center;
                     }
                 }
             }
-        }        
+        }
     }
 }
