add-flexibility-to-working-process-component

--- a/src/components/working-process/working-process.scss
+++ b/src/components/working-process/working-process.scss
@@ -1,8 +1,8 @@
 .working-process {
-    @apply mt-20;
+    @apply mt-10;
 
     .working-process-content {
-        @apply flex flex-col justify-between mt-20;
+        @apply flex flex-col justify-between mt-10;
 
         .active-content {            
             background-color: #B9FF66;
@@ -14,11 +14,15 @@
             .working-process-content-item-border {
                 display: none;
             }
+
+            p {
+                display: none;
+            }
         }
 
         .working-process-content-item {
             @apply mb-7;
-            padding: 41px 60px 41px 60px;
+            padding: 30px;
             border-radius: 45px;
             border-width: 1px 1px 5px 1px;
             border-color: black;
@@ -29,20 +33,72 @@
                 .working-process-content-item-header-label {
                     @apply flex;
                     .number {
-                        @apply font-medium mr-6;
-                        font-size: 60px;
-                        line-height: 77px;
+                        @apply font-medium mr-3;
+                        font-size: 30px;
+                        line-height: 38px;
                     }
                     h3 {
-                        @apply self-center
+                        @apply self-center font-medium;
+                        font-size: 18px;
+                        line-height: 23px;
                     }
+                }
+                img {
+                    @apply flex shrink-0;
+                    width: 30px;
+                    height: 30px;
                 }
             }
 
             .working-process-content-item-border {
-                @apply w-full my-10;
+                @apply w-full my-5;
                 border-color: black;
                 border-width: 1px;
+            }
+        }
+    }
+}
+
+@screen lg {
+    .working-process {
+        @apply mt-20;
+    
+        .working-process-content {
+            @apply flex flex-col justify-between mt-20;
+    
+            .working-process-content-item {
+                @apply mb-7;
+                padding: 41px 60px 41px 60px;
+                border-radius: 45px;
+                border-width: 1px 1px 5px 1px;
+                border-color: black;
+    
+                .working-process-content-item-header {
+                    @apply flex justify-between;
+    
+                    .working-process-content-item-header-label {
+                        @apply flex;
+                        .number {
+                            @apply font-medium mr-6;
+                            font-size: 60px;
+                            line-height: 77px;
+                        }
+                        h3 {
+                            @apply self-center
+                        }
+                    }
+
+                    img {
+                        width: 58px;
+                        height: 58px;
+                    }
+                }
+    
+                .working-process-content-item-border {
+                    @apply w-full my-10;
+                    border-color: black;
+                    border-width: 1px;
+                }
             }
         }
     }
